--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,12 @@
 ---
+import MainLayout from "../layouts/MainLayout.astro"
+import { Hero, Footer, OtherProducts, ProductDetails, ThreeImageGallery } from "../sections"
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Initial</title>
-  </head>
-  <body>
-    <h1 class="text-red-500">Initial</h1>
-  </body>
-</html>
+<MainLayout title="main page" description="this is main page" keywords="key, words">
+  <Hero />
+  <ProductDetails />
+  <OtherProducts />
+  <ThreeImageGallery />
+  <Footer />
+</MainLayout>
