+updated sections UI

--- a/src/sections/OtherProducts.astro
+++ b/src/sections/OtherProducts.astro
@@ -1,19 +1,19 @@
 <section id="OtherProducts" class="w-full h-[30rem] bg-white flex flex-col lg:flex-row border-2 border-black divide-x-2 divide-black">
   <div class="w-full flex items-center justify-center">
-    <span class="text-5xl leading-relaxed">lorem ipsum dolor sit amet</span>
+    <span class="text-5xl leading-relaxed">Get our other donuts</span>
   </div>
   <div class="bg-orange-300 grid grid-flow-rows w-full divide-y-2 divide-black">
     <div class="flex items-center justify-center">
         <span>- product 1</span>
     </div>
     <div class="flex items-center justify-center">
-        <span>- product 1</span>
+        <span>- product 2</span>
     </div>
     <div class="flex items-center justify-center">
-        <span>- product 1</span>
+        <span>- product 3</span>
     </div>
     <div class="flex items-center justify-center">
-        <span>- product 1</span>
+        <span>- product 4</span>
     </div>
   </div>
 </section>
