--- a/src/sections/ProductDetails.astro
+++ b/src/sections/ProductDetails.astro
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div id="center_section" class="bg-blue-300 w-full flex items-center justify-center">
-    <video id="right_side_video" class="w-full h-full object-cover object-center" src="/donut-render.mp4"></video>
+    <video id="right_side_video" class="w-full h-full object-cover object-center" src="/3d-donut-animate-video.mp4"></video>
   </div>
 </section>
 <script>
@@ -31,7 +31,6 @@
         end: "200% center",
         pin: "#ProductDetails",
         pinSpacing: true,
-        markers: true,
         scrub: 1.4,
       },
     })
