--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,8 +1,12 @@
 <nav class="grid grid-cols-1 md:grid-cols-3 md:divide-black text-lg border-black border-b-2 sticky top-0 bg-white z-50 overflow-visible">
   <a class="text-3xl font-bold my-3 ml-4" href="/">retroDonut&copy;</a>
   <div class="grid grid-flow-col border-black md:border-x-2 divide-black md:divide-x-2">
-    <a class="btn-primary" href="/#ProductDetails">Product Details</a>
-    <a class="btn-primary" href="/#OtherProducts">Other Products</a>
+    <div class="grid place-content-center">
+      <a class="" href="/#ProductDetails">Product Details</a>
+    </div>
+    <div class="grid place-content-center">
+      <a class="text-center my-auto btn-primary" href="/#OtherProducts">Other Products</a>
+    </div>
   </div>
   <ul class="flex gap-3 items-center justify-end mr-12">
     <li>
