+fix title & description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,11 @@ import MainLayout from "../layouts/MainLayout.astro"
 import { Hero, Footer, OtherProducts, ProductDetails, ThreeImageGallery } from "../sections"
 ---
 
-<MainLayout title="main page" description="this is main page" keywords="key, words">
+<MainLayout
+  title="Retro Donut Website"
+  description="This Bora Şen's project is a proof of concept Retro Donut Company Website with a neubrutalist web-design. You can look at my other projects on bborasen.com"
+  keywords="Bora Şen"
+>
   <Hero />
   <ProductDetails />
   <OtherProducts />
