+setup github pages

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -5,15 +5,15 @@
       <a class="" href="/#ProductDetails">Product Details</a>
     </div>
     <div class="grid place-content-center">
-      <a class="text-center my-auto btn-primary" href="/#OtherProducts">Other Products</a>
+      <a class="text-center my-auto btn-primary" href="/retro-donut-website/#OtherProducts">Other Products</a>
     </div>
   </div>
   <ul class="flex gap-3 items-center justify-end mr-12">
     <li>
-      <a class="btn-primary" href="/">Shop</a>
+      <a class="btn-primary" href="/retro-donut-website">Shop</a>
     </li>
     <li>
-      <a class="btn-primary" href="/">Shop</a>
+      <a class="btn-primary" href="/retro-donut-website">Shop</a>
     </li>
   </ul>
 </nav>
