+setup gh-pages

--- a/src/sections/ThreeImageGallery.astro
+++ b/src/sections/ThreeImageGallery.astro
@@ -1,11 +1,11 @@
 <section class="w-full h-auto md:h-[50rem] flex flex-col md:flex-row divide-black divide-x-2 border-black border-b-2">
   <div class="w-full h-auto overflow-hidden">
-    <img class="w-full h-full object-cover object-center hover:scale-105" src="/photos/donut-1.webp" alt="" />
+    <img class="w-full h-full object-cover object-center hover:scale-105" src="/retro-donut-website/photos/donut-1.webp" alt="" />
   </div>
   <div class="w-full h-auto overflow-hidden">
-    <img class="w-full h-full object-cover object-center hover:scale-105" src="/photos/donut-2.webp" alt="" />
+    <img class="w-full h-full object-cover object-center hover:scale-105" src="/retro-donut-website/photos/donut-2.webp" alt="" />
   </div>
   <div class="w-full h-auto overflow-hidden">
-    <img class="w-full h-full object-cover object-center hover:scale-105" src="/photos/donut-3.webp" alt="" />
+    <img class="w-full h-full object-cover object-center hover:scale-105" src="/retro-donut-website/photos/donut-3.webp" alt="" />
   </div>
 </section>
