--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,5 +1,5 @@
 <section
-  class="text-5xl font-bold flex items-center justify-center w-full h-screen bg-[url(/photos/hero_bg.webp)] bg-no-repeat bg-center bg-cover border-black border-b-2"
+  class="text-5xl font-bold flex items-center justify-center w-full h-screen bg-[url(/retro-donut-website/photos/hero_bg.webp)] bg-no-repeat bg-center bg-cover border-black border-b-2"
 >
   <div class="w-full h-full text-[14rem]">
     <div class="flex items-center overflow-hidden text-white absolute bottom-4 left-0">
