+fix css load method

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,10 +1,9 @@
 ---
-import "./index.css"
 import Header from "./Header.astro"
 const { title, description, keywords } = Astro.props
 ---
 
-<html lang="en">
+<html lang="en" class="scroll-smooth font-montserrat">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/retro-donut-website/favicon.svg" />
