--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,8 +1,8 @@
 <nav class="grid grid-cols-1 md:grid-cols-3 md:divide-black text-lg border-black border-b-2 sticky top-0 bg-white z-50 overflow-visible">
-  <a class="text-3xl font-bold my-3 ml-4" href="/">retroDonut&copy;</a>
+  <a class="text-3xl font-bold my-3 ml-4" href="/retro-donut-website/#">retroDonut&copy;</a>
   <div class="grid grid-flow-col border-black md:border-x-2 divide-black md:divide-x-2">
     <div class="grid place-content-center">
-      <a class="" href="/#ProductDetails">Product Details</a>
+      <a class="" href="/retro-donut-website/#ProductDetails">Product Details</a>
     </div>
     <div class="grid place-content-center">
       <a class="text-center my-auto btn-primary" href="/retro-donut-website/#OtherProducts">Other Products</a>
@@ -10,10 +10,10 @@
   </div>
   <ul class="flex gap-3 items-center justify-end mr-12">
     <li>
-      <a class="btn-primary" href="/retro-donut-website">Shop</a>
+      <a class="btn-primary" href="/retro-donut-website/#">Shop</a>
     </li>
     <li>
-      <a class="btn-primary" href="/retro-donut-website">Shop</a>
+      <a class="btn-primary" href="/retro-donut-website/#">Shop</a>
     </li>
   </ul>
 </nav>
