--- a/src/sections/ProductDetails.astro
+++ b/src/sections/ProductDetails.astro
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div id="center_section" class="bg-blue-300 w-full flex items-center justify-center">
-    <video id="right_side_video" class="w-full h-full object-cover object-center" src="/3d-donut-animate-video.mp4"></video>
+    <video id="right_side_video" class="w-full h-full object-cover object-center" src="/retro-donut-website/3d-donut-animate-video.mp4"></video>
   </div>
 </section>
 <script>
