--- a/src/sections/OtherProducts.astro
+++ b/src/sections/OtherProducts.astro
@@ -1,4 +1,4 @@
-<section id="OtherProducts" class="w-full h-[30rem] bg-white flex flex-col lg:flex-row border-2 border-black divide-x-2 divide-black">
+<section id="OtherProducts" class="w-full md:h-[30rem] bg-white flex flex-col lg:flex-row border-2 border-black divide-x-2 divide-black">
   <div class="w-full flex items-center justify-center">
     <span class="text-5xl leading-relaxed">Get our other donuts</span>
   </div>
